--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">자기소개</h2>
                         <p class="text-white-50">
+<pre>
 방송 : <a href="https://www.spooncast.net/kr/profile/4590011/board">스푼라디오</a> / <a href="https://www.twitch.tv/wngh143">트위치</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">유튜브</a> / <a href="http://bj.afreecatv.com/wngh143">아프리카TV</a>
 Streaming : <a href="https://www.spooncast.net/kr/profile/4590011/board">SpoonRadio</a> / <a href="https://www.twitch.tv/wngh143">Twitch</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">Youtube</a> / <a href="http://bj.afreecatv.com/wngh143">AfreecaTV</a>
 						
@@ -64,6 +65,7 @@ Age : Private
 
 성별 : 남자
 Sex : Male
+</pre>
 						</p>
                     </div>
                 </div>
