--- a/index.html
+++ b/index.html
@@ -47,24 +47,24 @@
                         <h2 class="text-white mb-4">자기소개</h2>
                         <p class="text-white-50">
 <pre>
-방송 : <a href="https://www.spooncast.net/kr/profile/4590011/board">스푼라디오</a> / <a href="https://www.twitch.tv/wngh143">트위치</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">유튜브</a> / <a href="http://bj.afreecatv.com/wngh143">아프리카TV</a>
-Streaming : <a href="https://www.spooncast.net/kr/profile/4590011/board">SpoonRadio</a> / <a href="https://www.twitch.tv/wngh143">Twitch</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">Youtube</a> / <a href="http://bj.afreecatv.com/wngh143">AfreecaTV</a>
+<font color="#ffffff">방송 :</font> <a href="https://www.spooncast.net/kr/profile/4590011/board">스푼라디오</a> / <a href="https://www.twitch.tv/wngh143">트위치</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">유튜브</a> / <a href="http://bj.afreecatv.com/wngh143">아프리카TV</a>
+<font color="#ffffff">Streaming :</font> <a href="https://www.spooncast.net/kr/profile/4590011/board">SpoonRadio</a> / <a href="https://www.twitch.tv/wngh143">Twitch</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">Youtube</a> / <a href="http://bj.afreecatv.com/wngh143">AfreecaTV</a>
 						
-대학 전공 : 경찰행정학과
-College Major : Department of Police Administration
+<font color="#ffffff">대학 전공 : 경찰행정학과</font>
+<font color="#ffffff">College Major : Department of Police Administration</font>
 
-나라 : 대한민국
-Country : Republic Of Korea (South Korea)
+<font color="#ffffff">나라 : 대한민국</font>
+<font color="#ffffff">Country : Republic Of Korea (South Korea)</font>
 
-군대 : 35사단 신병교육대 > 35사단 7733부대
-Military : 35st Division Basic Training Boot Camp
-Military : Army 35th Division 7733 Units
+<font color="#ffffff">군대 : 35사단 신병교육대 > 35사단 7733부대</font>
+<font color="#ffffff">Military : 35st Division Basic Training Boot Camp</font>
+<font color="#ffffff">Military : Army 35th Division 7733 Units</font>
 
-나이 : 비공개 ( 따로 물어봐주세요. )
-Age : Private
+<font color="#ffffff">나이 : 비공개</font>
+<font color="#ffffff">Age : Private</font>
 
-성별 : 남자
-Sex : Male
+<font color="#ffffff">성별 : 남자</font>
+<font color="#ffffff">Sex : Male</font>
 </pre>
 						</p>
                     </div>
