--- a/index.html
+++ b/index.html
@@ -77,11 +77,61 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/2.jpg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>서버 경력</h4>
+                            <p class="text-black-50 mb-0">
+							<pre>			
+[전] 아르마3 리얼 라이프서버 총어드민
+[Before] Arma3 Real Life Server Owner
+
+[전] 산안드레스 민터서버 부총어드민
+[Before] GTA SanAndreas MinterServer Sub-manager
+
+[전] 산안드레스 랜디슈거트의 자유절벽질주 총어드민
+[Before] GTA SanAndreas RandyShughart's 'Free Cliff Run' Manager
+
+[전] 산안드레스 랜디슈거트의 대통령지키기 총어드민
+[Before] GTA SanAndreas RandyShughart's 'Save the President' Manager
+
+[전] 산안드레스 랜디슈거트의 군RP 총어드민
+[Before] GTA SanAndreas 'RandyShughart's Military RolePlay' Manager
+
+[전] 산안드레스 심슨절벽질주 폴리스
+[Before] GTA SanAndreas 'Simpson's Free Cliff Server' Surveillant
+
+[전] 산안드레스 랜디슈거트의 자유모드 총어드민
+[Before] GTA SanAndreas 'RandyShughart's Free Mod' Manager
+
+[전] 팀포트리스 오렌지서버 폴리스
+[Before] TeamFortress 'Orange Server' Surveillant
+
+[전] 러스트 알파 모드서버 총어드민
+[Befor] Rust Legacy 'Mod Server' Manager
+
+[전] 카스소스 버니합서버 총어드민
+[Before] Counter Strike Source 'BunnyHop Server' Manager
+
+[전] 카스소스 서프서버 총어드민
+[Before] Counter Strike Source 'Surf Server' Manager
+
+[전] 카스소스 미니게임 총어드민
+[Before] Counter Strike Source 'MiniGame Server' Manager
+
+[전] 카스소스 데스런 총어드민
+[Before] Counter Strike Source 'DeathRun Server' Manager
+
+[전] 카스소스 사람인의 데스런 부어드민
+[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager
+
+[현] 러스트 베타 모드서버 총어드민 
+[Now] Rust Mod Server Manager
+
+[현] 아르마3 서울라이프 총어드민
+[Now] Arma3 SeoulLife Owner			
+							</pre>
+							</p>
                         </div>
                     </div>
                 </div>
