--- a/index.html
+++ b/index.html
@@ -71,18 +71,15 @@
                 </div>
                 <img class="img-fluid" src="assets/img/1.png" alt="" />
             </div>
-        </section>
-        <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        </header>
+        <!-- About-->
+        <section class="about-section text-center" id="about">
             <div class="container">
-                <!-- Featured Project Row-->
-                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/2.jpg" alt="" /></div>
-                    <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
-                            <h4>서버 경력</h4>
-                            <p class="text-black-50 mb-0">
-							<pre>			
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">서버경력</h2>
+                        <p class="text-white-50">
+<pre>		
 [전] 아르마3 리얼 라이프서버 총어드민
 [Before] Arma3 Real Life Server Owner
 
@@ -130,11 +127,12 @@
 
 [현] 아르마3 서울라이프 총어드민
 [Now] Arma3 SeoulLife Owner			
-							</pre>
-							</p>
-                        </div>
+</pre>
+						</p>
                     </div>
                 </div>
+                <img class="img-fluid" src="assets/img/2.jpg" alt="" />
+            </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
