--- a/index.html
+++ b/index.html
@@ -80,53 +80,53 @@
                         <h2 class="text-white mb-4">서버경력</h2>
                         <p class="text-white-50">
 <pre>		
-[전] 아르마3 리얼 라이프서버 총어드민
-[Before] Arma3 Real Life Server Owner
+<font color="#ffffff">[전] 아르마3 리얼 라이프서버 총어드민</font>
+<font color="#ffffff">[Before] Arma3 Real Life Server Owner</font>
 
-[전] 산안드레스 민터서버 부총어드민
-[Before] GTA SanAndreas MinterServer Sub-manager
+<font color="#ffffff">[전] 산안드레스 민터서버 부총어드민</font>
+<font color="#ffffff">[Before] GTA SanAndreas MinterServer Sub-manager</font>
 
-[전] 산안드레스 랜디슈거트의 자유절벽질주 총어드민
-[Before] GTA SanAndreas RandyShughart's 'Free Cliff Run' Manager
+<font color="#ffffff">[전] 산안드레스 랜디슈거트의 자유절벽질주 총어드민</font>
+<font color="#ffffff">[Before] GTA SanAndreas RandyShughart's 'Free Cliff Run' Manager</font>
 
-[전] 산안드레스 랜디슈거트의 대통령지키기 총어드민
-[Before] GTA SanAndreas RandyShughart's 'Save the President' Manager
+<font color="#ffffff">[전] 산안드레스 랜디슈거트의 대통령지키기 총어드민</font>
+<font color="#ffffff">[Before] GTA SanAndreas RandyShughart's 'Save the President' Manager</font>
 
-[전] 산안드레스 랜디슈거트의 군RP 총어드민
-[Before] GTA SanAndreas 'RandyShughart's Military RolePlay' Manager
+<font color="#ffffff">[전] 산안드레스 랜디슈거트의 군RP 총어드민</font>
+<font color="#ffffff">[Before] GTA SanAndreas 'RandyShughart's Military RolePlay' Manager</font>
 
-[전] 산안드레스 심슨절벽질주 폴리스
-[Before] GTA SanAndreas 'Simpson's Free Cliff Server' Surveillant
+<font color="#ffffff">[전] 산안드레스 심슨절벽질주 폴리스</font>
+<font color="#ffffff">[Before] GTA SanAndreas 'Simpson's Free Cliff Server' Surveillant</font>
 
-[전] 산안드레스 랜디슈거트의 자유모드 총어드민
-[Before] GTA SanAndreas 'RandyShughart's Free Mod' Manager
+<font color="#ffffff">[전] 산안드레스 랜디슈거트의 자유모드 총어드민</font>
+<font color="#ffffff">[Before] GTA SanAndreas 'RandyShughart's Free Mod' Manager</font>
 
-[전] 팀포트리스 오렌지서버 폴리스
-[Before] TeamFortress 'Orange Server' Surveillant
+<font color="#ffffff">[전] 팀포트리스 오렌지서버 폴리스</font>
+<font color="#ffffff">[Before] TeamFortress 'Orange Server' Surveillant</font>
 
-[전] 러스트 알파 모드서버 총어드민
-[Befor] Rust Legacy 'Mod Server' Manager
+<font color="#ffffff">[전] 러스트 알파 모드서버 총어드민</font>
+<font color="#ffffff">[Befor] Rust Legacy 'Mod Server' Manager</font>
 
-[전] 카스소스 버니합서버 총어드민
-[Before] Counter Strike Source 'BunnyHop Server' Manager
+<font color="#ffffff">[전] 카스소스 버니합서버 총어드민</font>
+<font color="#ffffff">[Before] Counter Strike Source 'BunnyHop Server' Manager</font>
 
-[전] 카스소스 서프서버 총어드민
-[Before] Counter Strike Source 'Surf Server' Manager
+<font color="#ffffff">[전] 카스소스 서프서버 총어드민</font>
+<font color="#ffffff">[Before] Counter Strike Source 'Surf Server' Manager</font>
 
-[전] 카스소스 미니게임 총어드민
-[Before] Counter Strike Source 'MiniGame Server' Manager
+<font color="#ffffff">[전] 카스소스 미니게임 총어드민</font>
+<font color="#ffffff">[Before] Counter Strike Source 'MiniGame Server' Manager</font>
 
-[전] 카스소스 데스런 총어드민
-[Before] Counter Strike Source 'DeathRun Server' Manager
+<font color="#ffffff">[전] 카스소스 데스런 총어드민</font>
+<font color="#ffffff">[Before] Counter Strike Source 'DeathRun Server' Manager</font>
 
-[전] 카스소스 사람인의 데스런 부어드민
-[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager
+<font color="#ffffff">[전] 카스소스 사람인의 데스런 부어드민</font>
+<font color="#ffffff">[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager</font>
 
-[현] 러스트 베타 모드서버 총어드민 
-[Now] Rust Mod Server Manager
+<font color="#ffffff">[현] 러스트 베타 모드서버 총어드민</font> 
+<font color="#ffffff">[Now] Rust Mod Server Manager</font>
 
-[현] 아르마3 서울라이프 총어드민
-[Now] Arma3 SeoulLife Owner			
+<font color="#ffffff">[현] 아르마3 서울라이프 총어드민</font>
+<font color="#ffffff">[Now] Arma3 SeoulLife Owner</font>		
 </pre>
 						</p>
                     </div>
