--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             </div>
         </header>
         <!-- About-->
+						</p>
+                    </div>
+                </div>
+                <img class="img-fluid" src="assets/img/2.jpg" alt="" />
+            </div>
         <section class="about-section text-center" id="about">
             <div class="container">
                 <div class="row">
@@ -122,17 +127,12 @@
 <font color="#ffffff">[전] 카스소스 사람인의 데스런 부어드민</font>
 <font color="#ffffff">[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager</font>
 
-<font color="#ffffff">[현] 러스트 베타 모드서버 총어드민</font> 
-<font color="#ffffff">[Now] Rust Mod Server Manager</font>
+<font color="#ffffff">[현] 러스트 모드서버 총어드민</font> 
+<font color="#ffffff">[Now] Rust Modded Server Manager</font>
 
 <font color="#ffffff">[현] 아르마3 서울라이프 총어드민</font>
-<font color="#ffffff">[Now] Arma3 SeoulLife Owner</font>		
+<font color="#ffffff">[Now] Arma3 Addon Seoul Life Owner</font>		
 </pre>
-						</p>
-                    </div>
-                </div>
-                <img class="img-fluid" src="assets/img/2.jpg" alt="" />
-            </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
