--- a/index.html
+++ b/index.html
@@ -123,16 +123,24 @@
 <font color="#ffffff">[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager</font>
 
 <font color="#ffffff">[현] 러스트 모드서버 총어드민</font> 
-<font color="#ffffff">　　[Now] Rust Modded Server Manager</font>
+<font color="#ffffff">　[Now] Rust Modded Server Manager</font>
 
 <font color="#ffffff">[현] 아르마3 서울라이프 총어드민</font>
-<font color="#ffffff">　　　　[Now] Arma3 Addon Seoul Life Owner</font>		
+<font color="#ffffff">　　　　　　[Now] Arma3 Addon Seoul Life Owner</font>		
 </pre>
 						</p>
                     </div>
                 </div>
                 <img class="img-fluid" src="assets/img/2.jpg" alt="" />
             </div>
+			<pre>
+			</pre>
+			<pre>
+			</pre>
+			<pre>
+			</pre>
+			<pre>
+			</pre>
 			<pre>
 			</pre>
                 <!-- Project One Row-->
