--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </header>
         <!-- About-->
-        <section class="about-section text-center" id="about">
+        <section class="about-section text-center" id="projects">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
