--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 <pre>
 <font color="#ffffff">방송 :</font> <a href="https://www.spooncast.net/kr/profile/4590011/board">스푼라디오</a> / <a href="https://www.twitch.tv/wngh143">트위치</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">유튜브</a> / <a href="http://bj.afreecatv.com/wngh143">아프리카TV</a>
 <font color="#ffffff">Streaming :</font> <a href="https://www.spooncast.net/kr/profile/4590011/board">SpoonRadio</a> / <a href="https://www.twitch.tv/wngh143">Twitch</a> / <a href="https://www.youtube.com/channel/UCawl48yCjaRryon0uLaFUoQ?view_as=subscriber">Youtube</a> / <a href="http://bj.afreecatv.com/wngh143">AfreecaTV</a>
-						
+			
+<font color="#ffffff">SNS :</font> <a href="https://www.facebook.com/profile.php?id=100003387671044">페이스북</a> / <a href="https://www.instagram.com/ursobadguy/">인스타그램</a> / <a href="https://open.kakao.com/me/DeltaForce">오픈채팅</a>
+			
 <font color="#ffffff">대학 전공 : 경찰행정학과</font>
 <font color="#ffffff">College Major : Department of Police Administration</font>
 
