--- a/index.html
+++ b/index.html
@@ -135,15 +135,17 @@
                 </div>
                 <img class="img-fluid" src="assets/img/2.jpg" alt="" />
             </div>
-
-
-
-
-
-
-
-
-
+			<pre>
+　
+　
+　
+　
+　
+　
+　
+　
+　
+</pre>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
@@ -229,7 +231,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">이 사이트는 DeltaForce에 의해 만들어졌으며 저작권 또한 DeltaForce에게 있습니다</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
