--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
+                                <h4 class="text-uppercase m-0">스팀 친구맺기</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <a href="https://steamcommunity.com/id/wngh143/">프로필 바로가기</a>
                             </div>
                         </div>
                     </div>
