--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">자기소개</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">경력</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pc">컴퓨터 사양</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">문의</a></li>
                     </ul>
                 </div>
@@ -147,14 +148,36 @@
 　
 </pre>
                 <!-- Project One Row-->
+        <section class="about-section text-center" id="pc">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">컴퓨터 사양</h2>
+                        <p class="text-white-50">
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/3.jpg" alt="" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">컴퓨터 사양</h4>
+                                    <p class="mb-0 text-white-50">
+									<pre>
+<font color="#efcdcd">CPU : Intel Core i5-4440 3.10ghz</font>
+
+<font color="#e9ffd5">GPU : ZOTAC GTX1060 6GB</font>
+
+<font color="#edfd00">MAINBORD : ECS H81H3-M4</font>
+
+<font color="#00f6ff">RAM : Samsung DDR3 8GB PC3-12800 x 2</font>
+
+<font color="#0d92b9">KEYBOARD : NKEYBOARD</font>
+
+<font color="#3bb44a">MOUSE : AULA GHOST SHARK</font>
+
+<font color="#ffffff">HEADPHONE: MAXTILL TRON G5100 SV 7.1</font>
+									</pre>
+									</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
