--- a/index.html
+++ b/index.html
@@ -138,14 +138,6 @@
             </div>
 			<pre>
 　
-　
-　
-　
-　
-　
-　
-　
-　
 </pre>
                 <!-- Project One Row-->
         <section class="about-section text-center" id="pc">
@@ -160,7 +152,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">컴퓨터 사양</h4>
+                                    <h4 class="text-white">Desktop Spec</h4>
                                     <p class="mb-0 text-white-50">
 									<pre>
 <font color="#efcdcd">CPU : Intel Core i5-4440 3.10ghz</font>
