--- a/index.html
+++ b/index.html
@@ -146,15 +146,9 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">컴퓨터 사양</h2>
                         <p class="text-white-50">
-                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/3.jpg" alt="" /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Desktop Spec</h4>
-                                    <p class="mb-0 text-white-50">
-									<pre>
+<pre>		
+<font color="#ff4646">Desktop Spec</font>
+
 <font color="#efcdcd">CPU : Intel Core i5-4440 3.10ghz</font>
 
 <font color="#e9ffd5">GPU : ZOTAC GTX1060 6GB</font>
@@ -168,14 +162,13 @@
 <font color="#3bb44a">MOUSE : AULA GHOST SHARK</font>
 
 <font color="#ffffff">HEADPHONE: MAXTILL TRON G5100 SV 7.1</font>
-									</pre>
-									</p>
-                                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                                </div>
-                            </div>
-                        </div>
+</pre>
+						</p>
                     </div>
                 </div>
+                <img class="img-fluid" src="assets/img/3.jpg" alt="" />
+            </div>
+        </header>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="" /></div>
