--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">자기소개</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">경력</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pc">컴퓨터 사양</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">문의</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +35,7 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">DeltaForce</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">어서오세요 저의 홈페이지에 오신걸 환영합니다</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">시작하기</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">둘러보기</a>
                 </div>
             </div>
         </header>
@@ -83,53 +82,53 @@
                         <h2 class="text-white mb-4">서버경력</h2>
                         <p class="text-white-50">
 <pre>		
-<font color="#ffffff">[전] 아르마3 리얼 라이프서버 총어드민</font>
-<font color="#ffffff">[Before] Arma3 Real Life Server Owner</font>
+<font color="#be4038">[전] 아르마3 리얼 라이프서버 총어드민</font>
+<font color="#be4038">[Before] Arma3 Real Life Server Owner</font>
 
-<font color="#ffffff">[전] 산안드레스 민터서버 부총어드민</font>
-<font color="#ffffff">[Before] GTA SanAndreas MinterServer Sub-manager</font>
+<font color="#be4038">[전] 산안드레스 민터서버 부총어드민</font>
+<font color="#be4038">[Before] GTA SanAndreas MinterServer Sub-manager</font>
 
-<font color="#ffffff">[전] 산안드레스 랜디슈거트의 자유절벽질주 총어드민</font>
-<font color="#ffffff">[Before] GTA SanAndreas RandyShughart's 'Free Cliff Run' Manager</font>
+<font color="#be4038">[전] 산안드레스 랜디슈거트의 자유절벽질주 총어드민</font>
+<font color="#be4038">[Before] GTA SanAndreas RandyShughart's 'Free Cliff Run' Manager</font>
 
-<font color="#ffffff">[전] 산안드레스 랜디슈거트의 대통령지키기 총어드민</font>
-<font color="#ffffff">[Before] GTA SanAndreas RandyShughart's 'Save the President' Manager</font>
+<font color="#be4038">[전] 산안드레스 랜디슈거트의 대통령지키기 총어드민</font>
+<font color="#be4038">[Before] GTA SanAndreas RandyShughart's 'Save the President' Manager</font>
 
-<font color="#ffffff">[전] 산안드레스 랜디슈거트의 군RP 총어드민</font>
-<font color="#ffffff">[Before] GTA SanAndreas 'RandyShughart's Military RolePlay' Manager</font>
+<font color="#be4038">[전] 산안드레스 랜디슈거트의 군RP 총어드민</font>
+<font color="#be4038">[Before] GTA SanAndreas 'RandyShughart's Military RolePlay' Manager</font>
 
-<font color="#ffffff">[전] 산안드레스 심슨절벽질주 폴리스</font>
-<font color="#ffffff">[Before] GTA SanAndreas 'Simpson's Free Cliff Server' Surveillant</font>
+<font color="#be4038">[전] 산안드레스 심슨절벽질주 폴리스</font>
+<font color="#be4038">[Before] GTA SanAndreas 'Simpson's Free Cliff Server' Surveillant</font>
 
-<font color="#ffffff">[전] 산안드레스 랜디슈거트의 자유모드 총어드민</font>
-<font color="#ffffff">[Before] GTA SanAndreas 'RandyShughart's Free Mod' Manager</font>
+<font color="#be4038">[전] 산안드레스 랜디슈거트의 자유모드 총어드민</font>
+<font color="#be4038">[Before] GTA SanAndreas 'RandyShughart's Free Mod' Manager</font>
 
-<font color="#ffffff">[전] 팀포트리스 오렌지서버 폴리스</font>
-<font color="#ffffff">[Before] TeamFortress 'Orange Server' Surveillant</font>
+<font color="#be4038">[전] 팀포트리스 오렌지서버 폴리스</font>
+<font color="#be4038">[Before] TeamFortress 'Orange Server' Surveillant</font>
 
-<font color="#ffffff">[전] 러스트 알파 모드서버 총어드민</font>
-<font color="#ffffff">[Befor] Rust Legacy 'Mod Server' Manager</font>
+<font color="#be4038">[전] 러스트 알파 모드서버 총어드민</font>
+<font color="#be4038">[Befor] Rust Legacy 'Mod Server' Manager</font>
 
-<font color="#ffffff">[전] 카스소스 버니합서버 총어드민</font>
-<font color="#ffffff">[Before] Counter Strike Source 'BunnyHop Server' Manager</font>
+<font color="#be4038">[전] 카스소스 버니합서버 총어드민</font>
+<font color="#be4038">[Before] Counter Strike Source 'BunnyHop Server' Manager</font>
 
-<font color="#ffffff">[전] 카스소스 서프서버 총어드민</font>
-<font color="#ffffff">[Before] Counter Strike Source 'Surf Server' Manager</font>
+<font color="#be4038">[전] 카스소스 서프서버 총어드민</font>
+<font color="#be4038">[Before] Counter Strike Source 'Surf Server' Manager</font>
 
-<font color="#ffffff">[전] 카스소스 미니게임 총어드민</font>
-<font color="#ffffff">[Before] Counter Strike Source 'MiniGame Server' Manager</font>
+<font color="#be4038">[전] 카스소스 미니게임 총어드민</font>
+<font color="#be4038">[Before] Counter Strike Source 'MiniGame Server' Manager</font>
 
-<font color="#ffffff">[전] 카스소스 데스런 총어드민</font>
-<font color="#ffffff">[Before] Counter Strike Source 'DeathRun Server' Manager</font>
+<font color="#be4038">[전] 카스소스 데스런 총어드민</font>
+<font color="#be4038">[Before] Counter Strike Source 'DeathRun Server' Manager</font>
 
-<font color="#ffffff">[전] 카스소스 사람인의 데스런 부어드민</font>
-<font color="#ffffff">[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager</font>
+<font color="#be4038">[전] 카스소스 사람인의 데스런 부어드민</font>
+<font color="#be4038">[Before] Counter Strike Source 'Human's DeathRun Server' Sub-Manager</font>
 
-<font color="#ffffff">[현] 러스트 모드서버 총어드민</font> 
-<font color="#ffffff"> [Now] Rust Modded Server Manager</font>
+<font color="#3bb44a">[현] 러스트 모드서버 총어드민</font> 
+<font color="#3bb44a"> [Now] Rust Modded Server Manager</font>
 
-<font color="#ffffff">[현] 아르마3 서울라이프 총어드민</font>
-<font color="#ffffff">　　　　　　  [Now] Arma3 Addon Seoul Life Owner</font>		
+<font color="#3bb44a">[현] 아르마3 서울라이프 총어드민</font>
+<font color="#3bb44a">　　　　　　  [Now] Arma3 Addon Seoul Life Owner</font>		
 </pre>
 						</p>
                     </div>
